--- a/nuxt-app/content/articles/10.Ollama-intruduction.md
+++ b/nuxt-app/content/articles/10.Ollama-intruduction.md
@@ -61,58 +61,71 @@ order: 2
             <td align="center" style="width: 180px;">
                 <img src="https://imgs.search.brave.com/V2oVVCsPaNxkGlhMMz5AxhgzgEvkZRmyQf3x22R5ebQ/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9hc3Nl/dHMuc3RpY2twbmcu/Y29tL2ltYWdlcy82/MmE3OTA2Y2U0MmQ3/MjlkOTI4YjE3NTcu/cG5n" alt="VS Code Logo" style="max-width: 100px; max-height: 80px; display: block; margin: 0 auto;">
                 <br>
-                <a href="https://code.visualstudio.com/download" target="_blank" rel="noopener">VS Code Download</a>
+                <a href="https://code.visualstudio.com/download" target="_blank" rel="noopener">VS Code</a>
             </td>
             <td align="center" style="width: 180px;">
                 <img src="https://www.python.org/static/community_logos/python-logo.png" alt="Python Logo" style="max-width: 100px; max-height: 80px; display: block; margin: 0 auto;">
                 <br>
-                <a href="https://www.python.org/downloads/" target="_blank" rel="noopener">Python Download</a>
+                <a href="https://www.python.org/downloads/" target="_blank" rel="noopener">Python</a>
             </td>
             <td align="center" style="width: 180px;">
                 <img src="https://imgs.search.brave.com/8xshJuTEcdDh4ATRrUMvxIB39O6v3yf7382wqSkPcWg/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9jZG4u/YnJhbmRmZXRjaC5p/by9pZHJSRG1aMl9G/L3cvMTgwL2gvMTgw/L3RoZW1lL2xpZ2h0/L2xvZ28ucG5nP2M9/MWJ4aWQ2NE11cDdh/Y3pld1NBWU1YJnQ9/MTc0Nzc0NDA3MTE3/OA" alt="Ollama Logo" style="max-width: 100px; max-height: 80px; display: block; margin: 0 auto;">
                 <br>
-                <a href="https://ollama.com/download" target="_blank" rel="noopener">Ollama Download</a>
+                <a href="https://ollama.com/download" target="_blank" rel="noopener">Ollama</a>
             </td>
             <td align="center" style="width: 180px;">
                 <img src="https://imgs.search.brave.com/zLvtdX6w_dNUl6wAzFN-0BCdZQrJu7VkSySkbESjtsc/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly91cGxv/YWQud2lraW1lZGlh/Lm9yZy93aWtpcGVk/aWEvY29tbW9ucy9i/L2I5L052aWRpYV9D/VURBX0xvZ28uanBn" alt="CUDA Logo" style="max-width: 100px; max-height: 80px; display: block; margin: 0 auto;">
                 <br>
-                <a href="https://developer.nvidia.com/cuda-downloads" target="_blank" rel="noopener">CUDA Download</a>
+                <a href="https://developer.nvidia.com/cuda-downloads" target="_blank" rel="noopener">CUDA</a>
             </td>
         </tr>
     </table>
-    <table>
-        <thead>
+    <table class="w-full text-left table-auto border-separate [border-spacing:0_0.75rem]">
+        <thead class="text-gray-600 uppercase text-sm font-semibold">
             <tr>
-                <th>Component</th>
-                <th>Basic</th>
-                <th>Enthusiast</th>
+                <th class="px-6 py-3 bg-blue-100 rounded-l-2xl">Component</th>
+                <th class="px-6 py-3 bg-blue-100">Basic</th>
+                <th class="px-6 py-3 bg-blue-100 rounded-r-2xl">Enthusiast</th>
             </tr>
         </thead>
-        <tbody>
-            <tr>
-                <td>RAM</td>
-                <td>16 GB</td>
-                <td>32 GB+</td>
+        <tbody class="text-gray-800 text-base">
+            <tr class="bg-gray-50 hover:bg-gray-100 transition-colors duration-200 rounded-2xl">
+                <td class="px-6 py-4 rounded-l-2xl">
+                    <div class="font-medium">RAM</div>
+                </td>
+                <td class="px-6 py-4">16 GB</td>
+                <td class="px-6 py-4 rounded-r-2xl">32 GB+</td>
             </tr>
-            <tr>
-                <td>GPU VRAM</td>
-                <td>8 GB</td>
-                <td>16 GB+</td>
+            <tr class="bg-gray-50 hover:bg-gray-100 transition-colors duration-200 rounded-2xl">
+                <td class="px-6 py-4 rounded-l-2xl">
+                    <div class="font-medium">GPU VRAM</div>
+                </td>
+                <td class="px-6 py-4">8 GB</td>
+                <td class="px-6 py-4 rounded-r-2xl">16 GB+</td>
             </tr>
-            <tr>
-                <td>Storage</td>
-                <td>512 GB SSD</td>
-                <td>1 TB+ SSD</td>
+            <tr class="bg-gray-50 hover:bg-gray-100 transition-colors duration-200 rounded-2xl">
+                <td class="px-6 py-4 rounded-l-2xl">
+                    <div class="font-medium">Storage</div>
+                </td>
+                <td class="px-6 py-4">50 GB SSD</td>
+                <td class="px-6 py-4 rounded-r-2xl">1 TB+ SSD</td>
+            </tr>
+            <tr class="bg-gray-50 hover:bg-gray-100 transition-colors duration-200 rounded-2xl">
+                <td class="px-6 py-4 rounded-l-2xl">
+                    <div class="font-medium">CPU</div>
+                </td>
+                <td class="px-6 py-4">4+ Cores</td>
+                <td class="px-6 py-4 rounded-r-2xl">8+ Cores</td>
             </tr>
         </tbody>
     </table>
     <p>     </p>
         <div style="margin-top: 24px; margin-bottom: 24px;">
             <h4>Before You Begin: A Warm Welcome for Beginners</h4>
-            <p>Hello and welcome! If you are opening this guide, you have probably heard a lot about artificial intelligence and now want to get your hands on it yourself. But perhaps you also feel a little overwhelmed by terms like \"local LLMs,\" \"Jupyter Notebooks,\" and \"Virtual Environments.\" Don't worry, that is completely normal! This tutorial was written specifically for absolute beginners like you.</p>
+            <p>Hello and welcome! If you are opening this guide, you have probably heard a lot about artificial intelligence and now want to get your hands on it yourself. But perhaps you also feel a little overwhelmed by terms like "local LLMs," "Jupyter Notebooks," and "Virtual Environments." Don't worry, that is completely normal! This tutorial was written specifically for absolute beginners like you.</p>
             <p>Our goal is to show you how to run powerful AI models directly on your own computer. This is not only incredibly fascinating, but it also offers you full control over your data, maximum privacy, and the freedom to use AI models without an internet connection or expensive cloud services.</p>
             <h5>What to Expect: The Path to Local AI</h5>
-            <p>Imagine you have a brand new toolkit and are ready to build something big. Ollama is the most important tool in this kit. It takes the complexity out of the equation and makes it easy to install, manage, and run various AI models. We will use this tool to set up an AI \"playground\" in Visual Studio Code (VS Code), which resembles a kind of lab book called a Jupyter Notebook.</p>
+            <p>Imagine you have a brand new toolkit and are ready to build something big. Ollama is the most important tool in this kit. It takes the complexity out of the equation and makes it easy to install, manage, and run various AI models. We will use this tool to set up an AI "playground" in Visual Studio Code (VS Code), which resembles a kind of lab book called a Jupyter Notebook.</p>
             <p>In the following steps, we will together:</p>
             <ul>
                 <li>Install the necessary software.</li>
@@ -124,7 +137,7 @@ order: 2
             <p>You saw a table with hardware recommendations in the previous overview. It is important to understand that the performance of AI models heavily depends on your Random Access Memory (RAM) and, if you have one, on your Graphics Processing Unit (GPU).</p>
             <ul>
                 <li><strong>RAM:</strong> This is your computer's short-term memory. The larger the AI model, the more RAM is needed to run it.</li>
-                <li><strong>GPU:</strong> An NVIDIA graphics card can massively accelerate computational power. If you have one, the AI experience will be significantly faster. But even without a powerful GPU, you can get started—it will just take a bit longer.</li>
+                <li><strong>GPU:</strong> An NVIDIA graphics card can massively accelerate computational power. If you have one, the AI experience will be significantly faster. But even without a powerful GPU, you can get started it will just take a bit longer.</li>
             </ul>
             <p>See these recommendations as a guide, not as rigid rules. Even with a basic setup, you can experiment with smaller, yet impressive, models and learn the fundamentals.</p>
             <h5>The Most Important Thing: Be Patient and Be Curious!</h5>
