--- a/nuxt-app/content/articles/10.Ollama-intruduction.md
+++ b/nuxt-app/content/articles/10.Ollama-intruduction.md
@@ -6,10 +6,6 @@ layout: article_backup
 order: 2
 ---
 
-
-
-
-
 <style>
 .ollama-navbar {
     display: flex;
@@ -47,18 +43,16 @@ order: 2
 <input type="radio" name="ollama-tab" id="ollama-tab-0" class="ollama-tab-radio" checked>
 <input type="radio" name="ollama-tab" id="ollama-tab-1" class="ollama-tab-radio">
 <input type="radio" name="ollama-tab" id="ollama-tab-2" class="ollama-tab-radio">
-<input type="radio" name="ollama-tab" id="ollama-tab-3" class="ollama-tab-radio">
 <div class="ollama-navbar">
     <label class="ollama-navbar-btn" for="ollama-tab-0">📋 Preparation</label>
     <label class="ollama-navbar-btn" for="ollama-tab-1">⚙️ Setup</label>
-    <label class="ollama-navbar-btn" for="ollama-tab-2">🎮 Model Playground</label>
-    <label class="ollama-navbar-btn" for="ollama-tab-3">🔧 Troubleshooting</label>
+    <label class="ollama-navbar-btn" for="ollama-tab-2">💬 A1-Terminal</label>
 </div>
 <div class="ollama-navbar-content ollama-content-0">
         <div style="margin-top: 24px; margin-bottom: 24px;">
             <h4>Before You Begin</h4>
-            <p>If you are opening this guide, you have probably heard a lot about artificial intelligence and now want to get your hands on it yourself. But perhaps you also feel a little overwhelmed by terms like "local LLMs," "Jupyter Notebooks," and "Virtual Environments." Don't worry, that is completely normal! This tutorial was written specifically for absolute beginners like you.</p>
-            <p>Our goal is to show you how to run powerful AI models directly on your own computer. This is not only incredibly fascinating, but it also offers you full control over your data, maximum privacy, and the freedom to use AI models without an internet connection or expensive cloud services.</p>
+            <p>This guide provides an introduction to running AI models locally on your computer. You'll learn how to work with Large Language Models (LLMs) using tools like Ollama, Jupyter Notebooks, and Python virtual environments.</p>
+            <p>Running AI models locally offers several advantages: full control over your data, enhanced privacy, no dependency on internet connectivity, and no recurring cloud service costs. This approach is particularly valuable for academic work, research projects, and learning the fundamentals of AI implementation.</p>
         </div>
     <table>
         <tr>
@@ -124,21 +118,22 @@ order: 2
         </tbody>
     </table>
     <p>     </p>
-            <p>Ollama is the most important tool in this kit. It takes the complexity out of the equation and makes it easy to install, manage, and run various AI models. We will use this tool to set up an AI "playground" in Visual Studio Code (VS Code), which resembles a kind of lab book called a Jupyter Notebook.</p>
-            <p>In the following steps, we will together:</p>
+            <p>Ollama serves as the primary interface for managing and running AI models locally. It simplifies the process of installing, configuring, and executing various language models. This guide demonstrates how to configure a development environment using Visual Studio Code (VS Code) and Jupyter Notebooks for interactive AI experimentation.</p>
+            <p>The following sections cover:</p>
             <ul>
-                <li>Install the necessary software.</li>
-                <li>Set up your development environment so that everything is clean and organized.</li>
-                <li>Download your first AI model and get it running with a few lines of code.</li>
+                <li>Software installation and configuration</li>
+                <li>Development environment setup with proper isolation using virtual environments</li>
+                <li>Initial model deployment and execution</li>
             </ul>
-            <p>You don't need to be a programming expert to get started. We will guide you through every single step and provide you with all the code snippets you need.</p>
+            <p>Each step includes detailed instructions and code examples. Prior programming experience is helpful but not required, as all necessary commands and configurations are provided.</p>
             <h5>A Quick Look at the Hardware</h5>
-            <p>You saw a table with hardware recommendations in the previous overview. It is important to understand that the performance of AI models heavily depends on your Random Access Memory (RAM) and, if you have one, on your Graphics Processing Unit (GPU).</p>
+            <p>The hardware requirements table provides recommended specifications for different use cases. Performance of AI models is primarily determined by available Random Access Memory (RAM) and, optionally, Graphics Processing Unit (GPU) capabilities.</p>
             <ul>
-                <li><strong>RAM:</strong> This is your computer's short-term memory. The larger the AI model, the more RAM is needed to run it.</li>
-                <li><strong>GPU:</strong> An NVIDIA graphics card can massively accelerate computational power. If you have one, the AI experience will be significantly faster. But even without a powerful GPU, you can get started it will just take a bit longer.</li>
+                <li><strong>RAM:</strong> The system's primary memory allocation directly affects which model sizes can be loaded and executed. Larger models require proportionally more RAM.</li>
+                <li><strong>GPU:</strong> NVIDIA graphics cards with CUDA support can significantly accelerate inference times. GPU acceleration is optional and provides performance benefits but is not required for basic operation.</li>
+                <li><strong>CPU-Only Operation:</strong> GPU hardware is not mandatory. Ollama functions on CPU-only systems with standard configurations. Smaller models (e.g., <code>tinyllama:1.1b</code>, <code>phi3:mini</code>, <code>gemma:2b</code>) operate efficiently on systems with 4-8GB RAM. Response generation is slower compared to GPU-accelerated setups but remains practical for learning and development purposes.</li>
             </ul>
-            <p>See these recommendations as a guide, not as rigid rules. Even with a basic setup, you can experiment with smaller, yet impressive, models and learn the fundamentals.</p>
+            <p>These specifications serve as guidelines rather than strict requirements. Entry-level hardware configurations are sufficient for experimentation with compact models and learning fundamental concepts. CUDA installation is only necessary for leveraging NVIDIA GPU acceleration and can be omitted for CPU-based workflows.</p>
         </div>
 
         
@@ -152,69 +147,92 @@ order: 2
     <p>Start Ollama after installation and check if the service is running. Make sure Python and CUDA are set up correctly for optimal AI model performance. Configure your environment variables and test the installation.</p>
 </div>
 
-
 <div class="ollama-navbar-content ollama-content-2">
-    <h4>Testing and Experimentation</h4>
-    <p>Compare model requirements:</p>
-    <ul>
-        <li><strong>gemma3:1b</strong> – 815 MB, 4 GB RAM, Multimodal/Chat</li>
-        <li><strong>mistral:7b</strong> – 4.1 GB, 8 GB RAM, Fast Chat</li>
-        <li><strong>llama2:7b</strong> – 3.8 GB, 8 GB RAM, General Chat</li>
-        <li><strong>codellama:7b</strong> – 3.8 GB, 8 GB RAM, Code Generation</li>
-        <li><strong>deepseek-coder:33b</strong> – 18 GB, 22 GB RAM, Complex Coding</li>
-        <li><strong>llama3.1:70b</strong> – 40 GB, 48 GB RAM, Advanced Reasoning</li>
-    </ul>
-    <ol>
-        <li>Start Ollama server in a separate terminal: <code>ollama serve</code></li>
-        <li>Download a model: <code>ollama pull gemma3:1b</code></li>
-        <li>Run in Jupyter Notebook (VS Code):</li>
 
-        # Ensure Ollama server is running!
-        model_name = 'gemma3:1b'
+#### A1-Terminal: Professioneller Chat-Client für lokale AI-Modelle
 
-        try:
-            ollama.list()
-            print("Ollama Server reachable.")
+**🚀 Ki-whisperer - Modulare Chat-Anwendung mit Ollama**  
+[GitHub Repository →](https://github.com/Nr44suessauer/Ki-whisperer)
 
-            response = ollama.chat(
-                model=model_name,
-                messages=[
-                    {
-                        'role': 'user',
-                        'content': 'Why is the sky blue? Explain simply.',
-                    },
-                ]
-            )
-            print("\nFull response:")
-            print(response)
-            # Robust: Zeige die Antwort, falls das Feld existiert
-            if 'message' in response and isinstance(response['message'], dict) and 'content' in response['message']:
-                print("\nModel response:")
-                print(response['message']['content'])
-            else:
-                print("\nNo valid model response found in 'message' field.")
-        except Exception as e:
-            print(f"\nError: {e}")
-            print("Make sure 'ollama serve' is running in a separate terminal.")
-</ol>   
-</div>
-<div class="ollama-navbar-content ollama-content-3">
-    <h4>Common Issues and Solutions</h4>
-    <ul>
-        <li><strong>ModuleNotFoundError: No module named 'ollama'</strong><br>
-            Install <code>ollama</code> in your active virtual environment: <code>pip install ollama</code>.
-        </li>
-        <li><strong>Slow performance or high CPU usage</strong><br>
-            Try smaller models (e.g., <code>gemma3:1b</code>). For NVIDIA GPUs, ensure CUDA Toolkit is installed.
-        </li>
-        <li><strong>Connection to Ollama server failed</strong><br>
-            Make sure <code>ollama serve</code> is running in a separate terminal. Check firewall settings for port 11434.
-        </li>
-        <li><strong>CUDA conflicts or GPU not detected</strong><br>
-            Update NVIDIA drivers, check CUDA version with <code>nvidia-smi</code>, and restart your system if needed.
-        </li>
-    </ul>
-    <p>Refer to documentation or forums for further help.</p>
+##### ✨ Hauptfeatures
+
+- **🎯 Modulare Architektur** – Saubere Code-Struktur mit klarer Trennung der Komponenten
+- **🚀 Echtzeit-Streaming** – Sehen Sie AI-Antworten live Token-für-Token
+- **💾 Session-Management** – Speichern und laden Sie Chat-Sitzungen automatisch
+- **🎨 Vollständig anpassbar** – Individualisieren Sie Farben, Schriftarten und Layout
+- **📊 Model-Management** – Download, Auswahl und Kategorisierung nach RAM-Anforderungen
+- **🔄 Offline-fähig** – Alle Modelle laufen komplett lokal auf Ihrem PC
+
+##### 🏗️ Projekt-Struktur
+
+```
+Ki-whisperer/
+├── a1_terminal_modular/       # Modulare Version (empfohlen)
+│   ├── main.py               # Einstiegspunkt
+│   ├── start.bat             # Windows-Launcher
+│   ├── requirements.txt      # Python-Dependencies
+│   └── src/
+│       ├── core/             # Kernlogik
+│       │   ├── a1_terminal.py      # Hauptanwendung (3200+ Zeilen)
+│       │   └── ollama_manager.py   # API-Client (320 Zeilen)
+│       └── ui/               # UI-Komponenten
+│           ├── color_wheel.py      # RGB-Farbwähler
+│           ├── chat_bubble.py      # Chat-Nachrichten
+│           └── categorized_combobox.py  # Dropdown-Menü
+└── ki_whisperer_config.yaml  # Zentrale Konfiguration
+```
+
+##### 🚀 Schnellstart
+
+1. **Ollama installieren** – Besuchen Sie [ollama.ai](https://ollama.ai/) und installieren Sie Ollama
+2. **Repository klonen**
+   ```bash
+   git clone https://github.com/Nr44suessauer/Ki-whisperer.git
+   cd Ki-whisperer/a1_terminal_modular
+   ```
+3. **Dependencies installieren**
+   ```bash
+   pip install -r requirements.txt
+   ```
+4. **Anwendung starten**
+   ```bash
+   .\start.bat
+   # oder
+   python main.py
+   ```
+
+##### 🎨 Intelligente Model-Kategorisierung
+
+Modelle sind farblich nach RAM-Anforderungen gruppiert:
+
+- **🟢 Klein (< 4GB RAM)** – 18 Modelle: `tinyllama:1.1b`, `phi3:mini`, `gemma:2b`
+- **🟡 Mittel (4-8GB RAM)** – 32 Modelle: `llama3.2:3b`, `mistral:7b`, `codellama:7b`
+- **🟠 Groß (8-16GB RAM)** – 3 Modelle: `llama2:13b`, `solar:10.7b`, `starcode:15b`
+- **🔴 Sehr Groß (16GB+ RAM)** – 7 Modelle: `llama2:70b`, `mixtral:8x7b`, `codellama:34b`
+
+##### 🌐 Live-API Integration
+
+- **Echte Live-Daten** – Keine statische Liste, immer die neuesten Modelle
+- **Automatische Updates** – Neue Modelle erscheinen sofort nach Release
+- **60+ Aktuelle Modelle** – Vollständige Ollama-Bibliothek verfügbar
+- **Fallback-System** – Robuste Offline-Liste bei API-Problemen
+
+##### 🎛️ Erweiterte Features
+
+- **BIAS-System** – Session-spezifischer Kontext (Background Information And System instructions)
+- **Anti-Redundanz-System** – Saubere Ausgaben ohne nervige Wiederholungen
+- **RGB-Farbwähler** – Visueller Farbwähler mit Live-Preview
+- **Export-Funktionen** – Markdown und JSON-Export von Chat-Sessions
+- **Performance-Monitoring** – Response-Time, Token-Rate und Memory-Usage
+- **Threading** – Alle API-Calls laufen im Hintergrund, UI bleibt reaktiv
+
+##### 📖 Dokumentation
+
+Die vollständige technische Dokumentation mit API-Referenz, Konfigurationsoptionen und Best Practices finden Sie hier:  
+[**➡️ Vollständige Dokumentation**](https://github.com/Nr44suessauer/Ki-whisperer/blob/main/DOKUMENTATION.md)
+
+**💡 Tipp:** A1-Terminal ist perfekt für alle, die ihre Ollama-Modelle mit einer modernen GUI nutzen möchten. Es bietet deutlich mehr Komfort als das Terminal und ist ideal für produktive Arbeit mit lokalen AI-Modellen.
+
 </div>
 </div>
 <style>
@@ -232,14 +250,12 @@ order: 2
 }
 #ollama-tab-0:checked ~ .ollama-navbar .ollama-navbar-btn[for="ollama-tab-0"],
 #ollama-tab-1:checked ~ .ollama-navbar .ollama-navbar-btn[for="ollama-tab-1"],
-#ollama-tab-2:checked ~ .ollama-navbar .ollama-navbar-btn[for="ollama-tab-2"],
-#ollama-tab-3:checked ~ .ollama-navbar .ollama-navbar-btn[for="ollama-tab-3"] {
+#ollama-tab-2:checked ~ .ollama-navbar .ollama-navbar-btn[for="ollama-tab-2"] {
   background: #0056b3;
 }
 #ollama-tab-0:checked ~ .ollama-content-0,
 #ollama-tab-1:checked ~ .ollama-content-1,
-#ollama-tab-2:checked ~ .ollama-content-2,
-#ollama-tab-3:checked ~ .ollama-content-3 {
+#ollama-tab-2:checked ~ .ollama-content-2 {
   display: block;
 }
 </style>
