fix der navbar position

--- a/nuxt-app/content/articles/10.Ollama-intruduction.md
+++ b/nuxt-app/content/articles/10.Ollama-intruduction.md
@@ -8,23 +8,31 @@ layout: article_backup
 
 <style>
 /* Maximale Breite für den gesamten Artikel - überschreibt alle Container */
-.prose, 
-.prose-lg,
-.container,
-article,
+/* ABER: Nicht die Hauptnavigation beeinflussen */
+.prose:not(nav):not(header), 
+.prose-lg:not(nav):not(header),
+.container:not(nav):not(header),
+article:not(nav):not(header),
 .article-container,
 .content-container,
-main {
+main > *:not(nav):not(header) {
     max-width: 100% !important;
     width: 100% !important;
 }
 
 /* Entfernt seitliche Margins und Padding */
-.prose, article {
+.prose:not(nav):not(header), 
+article:not(nav):not(header) {
     margin-left: 0 !important;
     margin-right: 0 !important;
     padding-left: 20px !important;
     padding-right: 20px !important;
+}
+
+/* Stelle sicher, dass die Hauptnavigation nicht betroffen ist */
+nav, header, [role="navigation"] {
+    max-width: none !important;
+    width: auto !important;
 }
 
 .ollama-navbar-tabs {
@@ -61,9 +69,9 @@ main {
     padding: 24px;
     margin-top: -2px;
     border-top: 1px solid #ddd;
-    width: 60%;
-    margin-left: auto;
-    margin-right: auto;
+    width: 130%;
+    margin-left: -15%;
+    margin-right: -15%;
 }
 
 /* Tabellen auf volle Breite */
@@ -425,7 +433,7 @@ This downloads a small (~600 MB) test model. Other recommendations:
 
 <div style="display: flex; align-items: center; gap: 12px; margin: 16px 0; padding: 16px; background: linear-gradient(135deg, #025709ff 0%, #05fa1aff 100%); border-radius: 12px; border: 1px solid #010202ff; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
     <div style="background: #24292e; border-radius: 50%; width: 48px; height: 48px; display: flex; align-items: center; justify-content: center; box-shadow: 0 2px 6px rgba(0,0,0,0.2);">
-        <svg width="24" height="24" fill="#0df005ff" viewBox="0 0 16 16">
+        <svg width="24" height="24" fill="white" viewBox="0 0 16 16">
             <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
         </svg>
     </div>
